# AI_Agents_JobHeadHunters

./: .gitignore  README.md  agents_import_test.ipynb  requirements.txt
headhunter_agents_ux/: README.md  pyproject.toml
headhunter_agents_ux/src/headhunter_agents_ux/: crew.py  main.py
headhunter_agents_ux/src/headhunter_agents_ux/config/: agents.yaml  tasks.yaml
